--- a/packages/firebase_ui_auth/pubspec.yaml
+++ b/packages/firebase_ui_auth/pubspec.yaml
@@ -1,6 +1,7 @@
 name: firebase_ui_auth
 description: Pre-built widgets library that are integrated with the variety of the Firebase Auth providers.
 version: 1.13.0
+publish_to: 'none'
 repository: https://github.com/firebase/FirebaseUI-Flutter/tree/master/packages/firebase_ui_auth
 homepage: https://github.com/firebase/FirebaseUI-Flutter/tree/master/packages/firebase_ui_auth
 
@@ -13,9 +14,33 @@ dependencies:
   firebase_auth: ^4.17.5
   firebase_core: ^2.25.4
   firebase_dynamic_links: ^5.4.14
-  firebase_ui_localizations: ^1.10.2
-  firebase_ui_oauth: ^1.5.0
-  firebase_ui_shared: ^1.4.1
+#  firebase_ui_localizations: ^1.10.2
+#  firebase_ui_oauth: ^1.5.0
+#  firebase_ui_shared: ^1.4.1
+
+#  firebase_ui_localizations:
+#    path: ../firebase_ui_localizations
+#  firebase_ui_oauth:
+#    path: ../firebase_ui_oauth
+#  firebase_ui_shared:
+#    path: ../firebase_ui_shared
+
+  firebase_ui_localizations:
+    git:
+      url: https://github.com/alexandr-zherebtsov/FirebaseUI-Flutter.git
+      path: packages/firebase_ui_localizations/
+      ref: feature/UI-builders
+  firebase_ui_oauth:
+    git:
+      url: https://github.com/alexandr-zherebtsov/FirebaseUI-Flutter.git
+      path: packages/firebase_ui_oauth/
+      ref: feature/UI-builders
+  firebase_ui_shared:
+    git:
+      url: https://github.com/alexandr-zherebtsov/FirebaseUI-Flutter.git
+      path: packages/firebase_ui_shared/
+      ref: feature/UI-builders
+
   flutter:
     sdk: flutter
   flutter_localizations:
