--- a/packages/firebase_ui_database/pubspec.yaml
+++ b/packages/firebase_ui_database/pubspec.yaml
@@ -1,18 +1,28 @@
 name: firebase_ui_database
 description: Pre-built widgets and utilites that make it easy to integrate Firebase Realtime Database into your Flutter app.
+publish_to: 'none'
 version: 1.4.2
-homepage: https://github.com/firebase/FirebaseUI-Flutter/tree/master/packages/firebase_ui_database
+#homepage: https://github.com/firebase/FirebaseUI-Flutter/tree/master/packages/firebase_ui_database
 
 environment:
   sdk: ">=2.18.0 <4.0.0"
   flutter: ">=3.3.0"
 
 dependencies:
-  collection: ^1.18.0
-  firebase_database: ^10.4.6
-  firebase_ui_localizations: ^1.10.2
   flutter:
     sdk: flutter
+  collection: ^1.18.0
+  firebase_database: ^10.4.6
+#  firebase_ui_localizations: ^1.10.2
+
+#  firebase_ui_localizations:
+#    path: ../firebase_ui_localizations
+
+  firebase_ui_localizations:
+    git:
+      url: https://github.com/alexandr-zherebtsov/FirebaseUI-Flutter.git
+      path: packages/firebase_ui_localizations/
+      ref: feature/UI-builders
 
 dev_dependencies:
   flutter_test:
