--- a/packages/firebase_ui_localizations/pubspec.yaml
+++ b/packages/firebase_ui_localizations/pubspec.yaml
@@ -1,7 +1,8 @@
 name: firebase_ui_localizations
 description: Localization package for firebase_ui_auth, firebase_ui_firestore and firebase_ui_database
+publish_to: 'none'
 version: 1.10.2
-homepage: https://github.com/firebase/FirebaseUI-Flutter/tree/master/packages/firebase_ui_localizations
+#homepage: https://github.com/firebase/FirebaseUI-Flutter/tree/master/packages/firebase_ui_localizations
 
 false_secrets:
   - example/**
