--- a/packages/firebase_ui_oauth_apple/pubspec.yaml
+++ b/packages/firebase_ui_oauth_apple/pubspec.yaml
@@ -1,7 +1,8 @@
 name: firebase_ui_oauth_apple
 description: Firebase UI widgets for authentication & OAuth.
+publish_to: 'none'
 version: 1.2.18
-homepage: https://github.com/firebase/FirebaseUI-Flutter/tree/master/packages/firebase_ui_oauth_apple
+#homepage: https://github.com/firebase/FirebaseUI-Flutter/tree/master/packages/firebase_ui_oauth_apple
 
 environment:
   sdk: ">=2.18.0 <4.0.0"
@@ -9,7 +10,17 @@ environment:
 
 dependencies:
   firebase_auth: ^4.17.5
-  firebase_ui_oauth: ^1.5.0
+#  firebase_ui_oauth: ^1.5.0
+
+#  firebase_ui_oauth:
+#    path: ../firebase_ui_oauth
+
+  firebase_ui_oauth:
+    git:
+      url: https://github.com/alexandr-zherebtsov/FirebaseUI-Flutter.git
+      path: packages/firebase_ui_oauth/
+      ref: feature/UI-builders
+
   flutter:
     sdk: flutter
 
