--- a/packages/firebase_ui_oauth_facebook/pubspec.yaml
+++ b/packages/firebase_ui_oauth_facebook/pubspec.yaml
@@ -1,18 +1,28 @@
 name: firebase_ui_oauth_facebook
 description: Firebase UI widgets for authentication & OAuth.
+publish_to: 'none'
 version: 1.2.18
-homepage: https://github.com/firebase/FirebaseUI-Flutter/tree/master/packages/firebase_ui_oauth_facebook
+#homepage: https://github.com/firebase/FirebaseUI-Flutter/tree/master/packages/firebase_ui_oauth_facebook
 
 environment:
   sdk: ">=2.18.0 <4.0.0"
   flutter: ">=3.3.0"
 
 dependencies:
-  firebase_auth: ^4.17.5
-  firebase_ui_oauth: ^1.5.0
   flutter:
     sdk: flutter
   flutter_facebook_auth: ^6.0.3
+  firebase_auth: ^4.17.5
+#  firebase_ui_oauth: ^1.5.0
+
+#  firebase_ui_oauth:
+#    path: ../firebase_ui_oauth
+
+  firebase_ui_oauth:
+    git:
+      url: https://github.com/alexandr-zherebtsov/FirebaseUI-Flutter.git
+      path: packages/firebase_ui_oauth/
+      ref: feature/UI-builders
 
 dev_dependencies:
   flutter_test:
